--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,18 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+ion-modal {
+    --background: rgba(44, 39, 45, 0.2);
+
+    &::part(content){
+        backdrop-filter: blur(6px);
+    }
+
+    ion-content {
+        --background:transparent;
+        --padding-top: 15vh;
+        --padding-start:20px;
+        --padding-end: 20px;
+    }
+}
